ECL 1.0
=======

* Errors fixed:

  - Under unix-like systems, relative symbolink links (such as the ones
    produced by "ln -sf ../tmp/foo faa") are now properly recognized and
    followed by TRUENAME.

* ANSI compliance:

  - The value of *READTABLE* can now be modified by the user.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***